set staging database config

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,13 @@ test:
 staging:
   <<: *default
   database: kenki_catalogdb_staging
+  username: <%= ENV['DATABASE_USER'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 production:
   <<: *default
   database: kenki_catalogdb_production
+  username: <%= ENV['PRODUCTION_DATABASE_USER'] %>
+  host: <%= ENV['PRODUCTION_DATABASE_HOST'] %>
+  password: <%= ENV['PRODUCTION_DATABASE_PASSWORD'] %>
